--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,11 @@
 
 <h1>Posts</h1>
 
+<% @posts.each do |post| %>
+<h2><%= link_to post.title, post %></h2>
+<!-- <h2 colspan="3"></h2> -->
+<p><%= post.body %></p>
+<!--
 <table>
   <thead>
     <tr>
@@ -13,18 +18,18 @@
   </thead>
 
   <tbody>
-    <% @posts.each do |post| %>
+
       <tr>
         <td><%= link_to post.title, post %></td>
-        <td><%= post.body %></td>
         <td><%= post.published %></td>
-        <!-- <td><%= link_to 'Show', post %></td> -->
+         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post), class: 'btn btn-primary' %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
+        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-success' %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+-->
 
 <br>
 
