--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,33 +3,12 @@
 <h1>Posts</h1>
 
 <% @posts.each do |post| %>
-<h2><%= link_to post.title, post %></h2>
-<!-- <h2 colspan="3"></h2> -->
-<p><%= post.body %></p>
-<!--
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th>Published</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-
-      <tr>
-        <td><%= link_to post.title, post %></td>
-        <td><%= post.published %></td>
-         <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post), class: 'btn btn-primary' %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-success' %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
--->
+  <%# post.title %>
+  <h2><%= link_to post.title, post %></h2>
+  <p><%= post.body %></p>
+  <%= link_to "edit post" , edit_post_path(post), class:"btn btn-success" %>
+  <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-success' %>
+<% end %>
 
 <br>
 
